solve new features send by email, min stock, max stock, critical stock